# forge_markdown_stream

./: .mcp.json  Cargo.toml
examples/: demo.rs
src/: code.rs  data.md  heading.rs  inline.rs  lib.rs  list.rs  main.rs  renderer.rs  repair.rs  style.rs  table.rs  text.rs  theme.rs  writer.rs
src/snapshots/: forge_markdown_stream__table__tests__long_content_with_tags_wrapping.snap  forge_markdown_stream__table__tests__multiline_content_wrapping.snap  forge_markdown_stream__table__tests__real_world_table_with_all_formatting.snap
